# routes/api.php
@@ -16,12 +16,49 @@ Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
 
-Route::apiResource('estados', EstadoController::class);
-Route::apiResource('municipios', MunicipioController::class);
-Route::apiResource('parroquias', ParroquiaController::class);
-Route::apiResource('comunidades', ComunidadController::class);
-Route::apiResource('ubicaciones', UbicacionController::class);
-Route::apiResource('roles', RoleController::class);
-Route::apiResource('usuarios', UsuarioController::class);
-Route::apiResource('personas', PersonaController::class);
-Route::apiResource('votacion-centros', VotacionCentroController::class);
+Route::get('/estados', [EstadoController::class, 'index']);
+Route::post('/estados', [EstadoController::class, 'store']);
+Route::get('/estados/{id}', [EstadoController::class, 'show']);
+Route::put('/estados/{id}', [EstadoController::class, 'update']);
+Route::delete('/estados/{id}', [EstadoController::class, 'destroy']);
+Route::get('/municipios', [MunicipioController::class, 'index']);
+Route::post('/municipios', [MunicipioController::class, 'store']);
+Route::get('/municipios/{id}', [MunicipioController::class, 'show']);
+Route::put('/municipios/{id}', [MunicipioController::class, 'update']);
+Route::delete('/municipios/{id}', [MunicipioController::class, 'destroy']);
+Route::get('/parroquias', [ParroquiaController::class, 'index']);
+Route::post('/parroquias', [ParroquiaController::class, 'store']);
+Route::get('/parroquias/{id}', [ParroquiaController::class, 'show']);
+Route::put('/parroquias/{id}', [ParroquiaController::class, 'update']);
+Route::delete('/parroquias/{id}', [ParroquiaController::class, 'destroy']);
+Route::get('/comunidades', [ComunidadController::class, 'index']);
+Route::post('/comunidades', [ComunidadController::class, 'store']);
+Route::get('/comunidades/{id}', [ComunidadController::class, 'show']);
+Route::put('/comunidades/{id}', [ComunidadController::class, 'update']);
+Route::delete('/comunidades/{id}', [ComunidadController::class, 'destroy']);
+Route::get('/ubicaciones', [UbicacionController::class, 'index']);
+Route::post('/ubicaciones', [UbicacionController::class, 'store']);
+Route::get('/ubicaciones/{id}', [UbicacionController::class, 'show']);
+Route::put('/ubicaciones/{id}', [UbicacionController::class, 'update']);
+Route::delete('/ubicaciones/{id}', [UbicacionController::class, 'destroy']);
+Route::get('/roles', [RoleController::class, 'index']);
+Route::post('/roles', [RoleController::class, 'store']);
+Route::get('/roles/{id}', [RoleController::class, 'show']);
+Route::put('/roles/{id}', [RoleController::class, 'update']);
+Route::delete('/roles/{id}', [RoleController::class, 'destroy']);
+Route::get('/usuarios', [UsuarioController::class, 'index']);
+Route::post('/usuarios', [UsuarioController::class, 'store']);
+Route::get('/usuarios/{id}', [UsuarioController::class, 'show']);
+Route::put('/usuarios/{id}', [UsuarioController::class, 'update']);
+Route::delete('/usuarios/{id}', [UsuarioController::class, 'destroy']);
+Route::post('/usuarios/login', [UsuarioController::class, 'login']);
+Route::get('/personas', [PersonaController::class, 'index']);
+Route::post('/personas', [PersonaController::class, 'store']);
+Route::get('/personas/{id}', [PersonaController::class, 'show']);
+Route::put('/personas/{id}', [PersonaController::class, 'update']);
+Route::delete('/personas/{id}', [PersonaController::class, 'destroy']);
+Route::get('/votacion-centros', [VotacionCentroController::class, 'index']);
+Route::post('/votacion-centros', [VotacionCentroController::class, 'store']);
+Route::get('/votacion-centros/{id}', [VotacionCentroController::class, 'show']);
+Route::put('/votacion-centros/{id}', [VotacionCentroController::class, 'update']);
+Route::delete('/votacion-centros/{id}', [VotacionCentroController::class, 'destroy']);
